--- a/docs/参考资料.md
+++ b/docs/参考资料.md
@@ -9,3 +9,5 @@ Redis事件: https://www.jianshu.com/p/99eba6dbd571
 ziplist源码分析： https://www.jianshu.com/p/afaf78aaf615 
 
 server端启动流程： https://blog.csdn.net/u013359794/article/details/79425252 
+
+ae事件库：<https://www.cyhone.com/articles/analysis-of-redis-ae/> 
