--- a/docs/参考资料.md
+++ b/docs/参考资料.md
@@ -12,4 +12,6 @@ server端启动流程： https://blog.csdn.net/u013359794/article/details/794252
 
 ae事件库：<https://www.cyhone.com/articles/analysis-of-redis-ae/>
 
-时间事件： https://blog.csdn.net/hackersuye/article/details/83051317 
+时间事件： https://blog.csdn.net/hackersuye/article/details/83051317
+
+redis单元测试：https://yq.aliyun.com/articles/62845 
