--- a/docs/常用的源码文件.md
+++ b/docs/常用的源码文件.md
@@ -203,6 +203,26 @@
 - tls.c
   -  安全传输协议实现 
 
+# Module(模块化)
+
+- module.c
+- redismodule.h
+
+> Redis自4.0版本之后便支持了模块扩展功能, Redis推荐开发人员通过引入redismodule.h, 来调用指定接口来支持扩展, 其中要求实现程序必须实现RedisModule_OnLoad方法, 该方法主要加载模块, 注册相应的api, 对context上下文注入
+
+使用方式 ：
+
+1、用户扩展模块需要通过配置文件指定需要加载的链接库(redis.conf配置文件)
+
+> ```properties
+> # loadmodule /path/to/my_module.so
+> # loadmodule /path/to/other_module.so
+> ```
+
+2、生成so文件
+
+> 动态库需要用户自己去编译生成, 在编译之前需要将指定的module引入redismodule.h头文件, 最简单的方式是直接将源文件拉入modules下, 修改MakeFile文件并执行make编译
+
 # 测试
 
 - memtest.c 
@@ -239,6 +259,10 @@
 
 - acl.c
 
+## 脚本相关
+
+- scripting.c
+
 ## 未分类
 
 - atomicvar.h
@@ -250,11 +274,8 @@
 - lazyfree.c
 - localtime.c
 - mkreleasehdr.sh
-- module.c
 - redis-trib.rb
 - redisassert.h
-- redismodule.h
-- scripting.c
 - setproctitle.c
 - siphash.c
 - timeout.c
