--- a/docs/参考资料.md
+++ b/docs/参考资料.md
@@ -15,3 +15,12 @@ ae事件库：<https://www.cyhone.com/articles/analysis-of-redis-ae/>
 时间事件： https://blog.csdn.net/hackersuye/article/details/83051317
 
 redis单元测试：https://yq.aliyun.com/articles/62845 
+
+Redis常见的坑： https://www.jianshu.com/p/7edb3e4e13e8
+
+Redis之IO封装：https://blog.csdn.net/Xiejingfa/article/details/51433696
+
+书籍图片：<http://1e-gallery.redisbook.com/index.html#> 
+
+Dict相关：<https://www.cnblogs.com/yinbiao/p/10766357.html> 
+
