--- a/docs/常用的源码文件.md
+++ b/docs/常用的源码文件.md
@@ -1,4 +1,6 @@
-# 常用的源码文件
+# Redis源码文件清单
+
+> Redis（Remote Dictionary Server 远程字典服务）是一个开源的使用ANSI [C语言](https://baike.baidu.com/item/C语言)编写、支持网络、可基于内存亦可持久化的日志型、Key-Value[数据库](https://baike.baidu.com/item/数据库/103728)，并提供多种语言的API。
 
 # 主程序(服务端与客户端)
 
@@ -8,32 +10,23 @@
 - redis_cli.c
   - redis客户端程序启动程序
 
-# 内存管理
-
-> 关于Redis的内存分配的封装实现
-
-- zmalloc.c
-- sdsalloc.h
-- rax_malloc.h
-- listpack_malloc.h
-
 # 数据结构
 
 - sds.c
   - 用于对字符串的定义，最基础的数据结构
 - dict.c 
-  - 主要对于内存中的hash进行管理
+  - 字典dict数据结构实现，主要对于内存中的hash进行管理
 - adlist.c 
-  - 用于对list的定义，它是个双向链表结构 
+  - 用于对list的定义，它是个**双向链表**结构 
 - ziplist.c 
-  - ziplist是一个类似于list的存储对象。它的原理类似于zipmap。
+  - 压缩列表ziplist数据结构实现，ziplist是为了节省列表空间而设计一种特殊编码方式，是一个类似于list的存储对象。它的原理类似于zipmap。
 - quicklist.c
   - 新加了list结构，以ziplist为基础
 - sparkline.c
   -  一个拥有sample列表的序列
 
 - zipmap.c  
-  - zipmap是一个类似于hash的存储对象。
+  - 压缩字典zipmap数据结构实现，zipmap是为了节省哈希表空间而设计一种特殊编码方式
 
 - intset.c
   - 整数集合
@@ -66,6 +59,16 @@
 - ae_select.c
   - select I/O模型实现
 
+# 内存管理
+
+> 关于Redis的内存分配的封装实现
+
+- zmalloc.c
+  - 对c语言中的malloc简单包装。仅仅是精确的记录的已经分配的内存，基本没有其它多余的扩展。
+- sdsalloc.h
+- rax_malloc.h
+- listpack_malloc.h
+
 # 网络连接
 
 - anet.c
@@ -75,40 +78,62 @@
   - 网络协议传输方法定义相关的都放在这个文件里面了。
 
 - connection.c
-  - TOTO
+  - 连接封装，相当于Java语言networking编程中的channel
 - connhelpers.h
 
-# 哨兵
+# 哨兵(sentinel)
 
 - sentinel.c
   - 哨兵模式实现高可用
 
-# Cluster集群
+# 集群(Cluster)
 
 - cluster.c
+
   - 3.0之后，集群模式实现
 
-# 数据库
+- rax.c
+
+  Redis基数树
+
+  >  Redis实现了不定长压缩前缀的radix tree，用在集群模式下存储slot对应的的所有key信息。本文将详述在Redis中如何实现radix tree 
+
+
+# 数据库(RDB)
 
 - db.c
   - 数据库实现
 - config.c 
   - 用于将配置文件redis.conf文件中的配置读取出来的属性通过程序放到server对象中。
 
-- multi.c
-  - 用于事务处理操作。
 - replication.c 
   - 用于主从数据库的复制操作的实现。从而实现redis读写分离
 
+# 事务处理(Transaction)
+
+- multi.c
+  - 用于事务处理操作。
+
 # 持久化备份 
+
+> Redis提供了两种备份机制，AOF和RDB:  
+>
+> Redis的AOF机制有点类似于Mysql binlog，是Redis的提供的一种持久化方式（另一种是RDB），它会将所有的写命令按照一定频率(no, always, every seconds)写入到日志文件中，当Redis停机重启后恢复数据库。
 
 - aof.c
   - 全称为append only file，作用就是记录每次的写操作,在遇到断电等问题时可以用它来恢复数据库状态。
 
+
+> 如果开启了AOF，每执行一条指令就需要执行一个AOF相关函数(不一定是真实写到AOF文件中，可能是BUFFER中，但一定会执行)
+
 - rdb.c
   - 对于Redis本地数据库的相关操作，默认文件是dump.rdb（通过配置文件获得），包括的操作包括保存，移除，查询等等。
 
-# 地理位置
+> RDB是由定时任务触发了，当符合了设置的RDB规则时就开始RDB.
+
+从上面可知，AOF安全性可靠性高于RDB,但AOF相对于RDB来说效率慢，体积大。
+
+# 地理位置(geo)
 
 >  GeoHash将二维的经纬度转换成字符串 。 Redis3.2版本提供，支持存储地理位置信息用来实现诸如附近位置、摇一摇这类依赖于地理位置信息的功能.geo的数据类型为zset 。
 
@@ -117,62 +142,38 @@
 - geohash_helper.c
 - gopher.c
 
-# 工具类
+- 
 
-- bitops.c 
-  - 位操作相关类
-- debug.c 
-  - 用于调试时使用
-- debugmacro.h
-- endianconv.c 
-  - 高低位转换，不同系统，高低位顺序不同
-- help.h  
-  - 辅助于命令的提示信息
-- 5.lzf_c.c
-  -  压缩算法系列
-- 6.lzf_d.c
-  -   压缩算法系列
-- rand.c
-  -  用于产生随机数
-- release.c
-  -  用于发步时使用
-- sha1.c 
-  - sha加密算法的实现
-- util.c 
-  -  通用工具方法
-- crc64.c 
-  - 循环冗余校验
-- lzf.h
-- lzf_c.c
-- lzf_d.c
-- lzfP.h
-- sha1.c
-- sha1.h
-- sha256.c
-- sha256.h
-- util.c
-- util.h
-- crc16.c
-- crc16_slottable.h
-- crc64.c
-- crc64.h
-
-# Redis基数树
-
->  Redis实现了不定长压缩前缀的radix tree，用在集群模式下存储slot对应的的所有key信息。本文将详述在Redis中如何实现radix tree 
-
-- rax.c
-
-# Stream相关
+# 流(Stream)
 
 > Redis5之后 
 
 - stream.h
-
 - lolwut.c
 - lolwut5.c
 - lolwut6.c
 - listpack.c
+
+# IO模块(Rio)
+
+> Reids内部封装了一个I/O层，称之为rio
+
+- rio.c redis
+  - 定义的一个I/O类
+
+- syncio.c
+  - 用于同步Socket和文件I/O操作。
+
+# 访问权限控制(ACL)
+
+>  Access Control List（访问控制列表）的缩写 
+
+- acl.c
+
+# 发布订阅模式(PUB/SUB)
+
+- pubsub.c 
+  - 用于订阅模式的实现，有点类似于Client广播发送的方式。
 
 # 封装类(Wrapper)
 
@@ -190,20 +191,14 @@
   -  用于创建和释放redisObject对象
 - pqsort.c  
   - 排序算法类
--  pubsub.c 
-  - 用于订阅模式的实现，有点类似于Client广播发送的方式。
-- rio.c redis
-  - 定义的一个I/O类
 - slowlog.c 
   - 一种日志类型的，与hyperloglog.c类似
 - sort.c 
   - 排序算法类，与pqsort.c使用的场景不同
-- syncio.c 
-  - 用于同步Socket和文件I/O操作。
 - tls.c
   -  安全传输协议实现 
 
-# Module(模块化)
+# 模块化(Module)
 
 - module.c
 - redismodule.h
@@ -223,11 +218,47 @@
 
 > 动态库需要用户自己去编译生成, 在编译之前需要将指定的module引入redismodule.h头文件, 最简单的方式是直接将源文件拉入modules下, 修改MakeFile文件并执行make编译
 
-# 测试
+# 算法相关
+
+**LZF压缩算法 **
+
+- lzf.h
+- lzf_c.c
+- lzf_d.c
+- lzfP.h
+  - 对 lzf.h 和 lzfP.h 的合并
+
+**SHA缩算法 **
+
+- sha1.c
+- sha1.h
+- sha256.c
+- sha256.h
+
+**CRC循环冗余校验 **
+
+- crc16.c
+- crc16_slottable.h
+- crc64.c
+- crc64.h
+
+# 工具类
+
+- bitops.c 
+  - 位操作相关类
+- endianconv.c 
+  - 高低位转换，不同系统，高低位顺序不同
+- help.h  
+  - 辅助于命令的提示信息
+- rand.c
+  -  用于产生随机数
+- util.c 
+  -  通用工具方法
+
+# 调试/测试
 
 - memtest.c 
   - 内存检测
-
 - redis_benchmark.c 
   - 用于redis性能测试的实现。
 - redis_check_aof.c 
@@ -236,6 +267,14 @@
   - 用于本地数据库检查的实现。
 - testhelp.c 
   - 一个C风格的小型测试框架。
+- debug.c 
+  - 用于调试时使用
+- debugmacro.h
+
+# 脚本(LUA)
+
+- scripting.c
+  - 主要是处理Lua脚本相关
 
 # 其它
 
@@ -246,22 +285,12 @@
 - asciilogo.c
   -  redis启动时logo显示
 
-## 兼容
+## 系统兼容
 
 - fmacros.h 
   - 兼容Mac系统下的问题
 - solarisfixes.h 
   - 兼容solary下的问题
-
-## ACL权限控制
-
->  Access Control List（访问控制列表）的缩写 
-
-- acl.c
-
-## 脚本相关
-
-- scripting.c
 
 ## 未分类
 
@@ -281,3 +310,6 @@
 - timeout.c
 - tracking.c
 - valgrind.sup
+
+- release.c
+  - 用于发步时使用
