--- a/docs/参考资料.md
+++ b/docs/参考资料.md
@@ -1,26 +1,45 @@
 # 参考资料
 
-SDS  https://blog.csdn.net/weixin_33682719/article/details/88923569 
+- SDS
+  -   https://blog.csdn.net/weixin_33682719/article/details/88923569 
 
-源码分析： https://www.cnblogs.com/jabnih/p/4814212.html
+- 源码分析
+  - https://www.cnblogs.com/jabnih/p/4814212.html
 
-Redis事件: https://www.jianshu.com/p/99eba6dbd571
+- Redis事件 
+  - https://www.jianshu.com/p/99eba6dbd571
 
-ziplist源码分析： https://www.jianshu.com/p/afaf78aaf615 
+- ziplist源码分析
+  -  https://www.jianshu.com/p/afaf78aaf615 
 
-server端启动流程： https://blog.csdn.net/u013359794/article/details/79425252 
+- server端启动流程
+  - https://blog.csdn.net/u013359794/article/details/79425252 
 
-ae事件库：<https://www.cyhone.com/articles/analysis-of-redis-ae/>
+- ae事件库
+  - <https://www.cyhone.com/articles/analysis-of-redis-ae/>
 
-时间事件： https://blog.csdn.net/hackersuye/article/details/83051317
+- 时间事件
+  -  https://blog.csdn.net/hackersuye/article/details/83051317
 
-redis单元测试：https://yq.aliyun.com/articles/62845 
+- redis单元测试
+  - https://yq.aliyun.com/articles/62845 
 
-Redis常见的坑： https://www.jianshu.com/p/7edb3e4e13e8
+- Redis常见的坑
+  - https://www.jianshu.com/p/7edb3e4e13e8
 
-Redis之IO封装：https://blog.csdn.net/Xiejingfa/article/details/51433696
+- Redis之IO封装：
 
-书籍图片：<http://1e-gallery.redisbook.com/index.html#> 
+​			https://blog.csdn.net/Xiejingfa/article/details/51433696
 
-Dict相关：<https://www.cnblogs.com/yinbiao/p/10766357.html> 
+​			http://www.zyiz.net/tech/detail-119118.html
 
+- 书籍图片
+  - <http://1e-gallery.redisbook.com/index.html#> 
+
+- Dict相关
+  - <https://www.cnblogs.com/yinbiao/p/10766357.html> 
+
+- Redis版本特性
+  - Redis6新版本特性
+    - http://www.zyiz.net/tech/detail-132369.html
+    - 
