--- a/docs/常用的源码文件.md
+++ b/docs/常用的源码文件.md
@@ -61,7 +61,9 @@
 
 # 内存管理
 
-> 关于Redis的内存分配的封装实现
+> 关于Redis的内存分配的封装实现。Redis并没有自己实现内存池，没有在标准的系统内存分配器上再加上自己的东西。所以系统内存分配器的性能及碎片率会对Redis造成一些性能上的影响。
+>
+> 常见的内存分配有：jemalloc,tcmalloc,libc等
 
 - zmalloc.c
   - 对c语言中的malloc简单包装。仅仅是精确的记录的已经分配的内存，基本没有其它多余的扩展。
@@ -70,6 +72,8 @@
 - listpack_malloc.h
 
 # 网络连接
+
+> networing.c依赖于connection.c,而connection.c依赖于anet.c
 
 - anet.c
   -  作为Server/Client通信的基础封装
@@ -114,7 +118,7 @@
 - multi.c
   - 用于事务处理操作。
 
-# 持久化备份 
+# 持久化备份(AOF和RDB)
 
 > Redis提供了两种备份机制，AOF和RDB:  
 >
@@ -177,8 +181,6 @@
 
 # 封装类(Wrapper)
 
-- bio.c 
-  - background I/O的意思，开启后台线程用的
 - hyperloglog.c 
   - 一种日志类型的
 - latency.c 
@@ -217,6 +219,32 @@
 2、生成so文件
 
 > 动态库需要用户自己去编译生成, 在编译之前需要将指定的module引入redismodule.h头文件, 最简单的方式是直接将源文件拉入modules下, 修改MakeFile文件并执行make编译
+
+# 后台线程(BIO)
+
+- bio.c
+
+  - BIO即background I/O service，后台I/O服务，是redis的aof持久化后台服务。redis把阻塞的同步I/O操作交给后台I/O服务来完成：close和fsync。
+
+  - **close加入BIO的原因**
+
+    1.如果fd是特定文件描述符的最后一份拷贝，那么文件描述符相关的资源会被释放。
+
+    2.如果fd是最后一个引用文件描述符的，并且文件描述符之前已经使用unlink进行删除，那么文件会被删除。
+
+    资源释放和文件删除是非常慢的，会阻塞服务器
+
+     
+
+    **fsync加入BIO的原因**
+
+    把内存中修改的文件数据同步到磁盘。调用者将被阻塞至磁盘报告同步完成。
+
+     
+
+    **BIO的设计**
+
+    目前有两种任务：fsync和close。每种任务一个队列和一个线程。
 
 # 算法相关
 
@@ -295,6 +323,7 @@
 ## 未分类
 
 - atomicvar.h
+  - 原子计数器
 - blocked.c
 - childinfo.c
 - defrag.c
@@ -310,6 +339,5 @@
 - timeout.c
 - tracking.c
 - valgrind.sup
-
 - release.c
   - 用于发步时使用
