--- a/docs/参考资料.md
+++ b/docs/参考资料.md
@@ -35,11 +35,10 @@
 
 - 书籍图片
   - <http://1e-gallery.redisbook.com/index.html#> 
-
 - Dict相关
   - <https://www.cnblogs.com/yinbiao/p/10766357.html> 
-
 - Redis版本特性
   - Redis6新版本特性
     - http://www.zyiz.net/tech/detail-132369.html
-    - 
+- 主从复制源码分析
+  - https://blog.csdn.net/maliao1123/article/details/54016501
