--- a/docs/常用的源码文件.md
+++ b/docs/常用的源码文件.md
@@ -10,7 +10,7 @@
 - redis_cli.c
   - redis客户端程序启动程序
 
-# 数据结构
+# 数据结构(DataStruct)
 
 - sds.c
   - 用于对字符串的定义，最基础的数据结构
@@ -46,7 +46,7 @@
 - t_zset.c
   - zset相关操作,主要是Server/Client中的应答操作。主要通过redisObject进行类型转换。
 
-# AE事件库
+# 事件库(AE)
 
 - ae.c
   - redis I/O模型
@@ -59,7 +59,7 @@
 - ae_select.c
   - select I/O模型实现
 
-# 内存管理
+# 内存管理(malloc)
 
 > 关于Redis的内存分配的封装实现。Redis并没有自己实现内存池，没有在标准的系统内存分配器上再加上自己的东西。所以系统内存分配器的性能及碎片率会对Redis造成一些性能上的影响。
 >
@@ -110,7 +110,10 @@
 - config.c 
   - 用于将配置文件redis.conf文件中的配置读取出来的属性通过程序放到server对象中。
 
-- replication.c 
+
+#  主从复制(Replication)
+
+- replication.c
   - 用于主从数据库的复制操作的实现。从而实现redis读写分离
 
 # 事务处理(Transaction)
