--- a/docs/常用的源码文件.md
+++ b/docs/常用的源码文件.md
@@ -98,9 +98,16 @@
 
 - rax.c
 
-  Redis基数树
+  Redis基数树。一种保存长整形的算法。
 
-  >  Redis实现了不定长压缩前缀的radix tree，用在集群模式下存储slot对应的的所有key信息。本文将详述在Redis中如何实现radix tree 
+  - 对于长整型数据的映射，如何解决Hash冲突和Hash表大小的设计是一个很头疼的问题。
+  - radix树就是针对这种稀疏的长整型数据查找，能快速且节省空间地完成映射。借助于Radix树，我们可以实现对于长整型数据类型的路由。
+  - 利用radix树可以根据一个长整型（比如一个长ID）快速查找到其对应的对象指针。这比用hash映射来的简单，也更节省空间，使用hash映射hash函数难以设计，不恰当的hash函数可能增大冲突，或浪费空间。
+  - radix tree是一种多叉搜索树，树的叶子结点是实际的数据条目。每个结点有一个固定的指针指向子结点（每个指针称为槽slot，n为划分的基的大小）
+  
+  ![rax](./images/99/rax.jpg)
+  
+  >  Redis实现了不定长压缩前缀的radix tree，用在集群模式下存储slot对应的的所有key信息。
 
 
 # 数据库(RDB)
@@ -185,22 +192,37 @@
 # 封装类(Wrapper)
 
 - hyperloglog.c 
-  - 一种日志类型的
+  
+  - `HyperLogLog`，简称为`HLL`，它是 `LogLog` 算法的升级版，作用是能够提供不精确的去重计数。存在以下的特点：
+    - 代码实现较难。
+    - 能够使用极少的内存来统计巨量的数据，在 `Redis` 中实现的 `HyperLogLog`，只需要`12K`内存就能统计`2^64`个数据。
+    - 计数存在一定的误差，误差率整体较低。标准误差为 0.81% 。
+    - 误差可以被设置`辅助计算因子`进行降低。
+  
+  > 参考资料：https://www.cnblogs.com/linguanh/p/10460421.html
 - latency.c 
-  - 延迟类
+  
+  - 延迟监控框架，可参考[Redis延迟监控框架](http://www.redis.cn/topics/latency-monitor.html)。redis在2.8.13版本引入了latency monitoring，这里主要是监控latency spikes(`延时毛刺`)。它基于事件机制进行监控，command事件是监控命令执行latency，fast-command事件是监控时间复杂度为O(1)及O(logN)命令的latency，fork事件则监控redis执行系统调用fork(2)的latency。
 - 5.migrate.c 
+  
   - 命令迁移类，包括命令的还原迁移等
 - notify.c 
+  
   - 通知类
 - object.c 
+  
   -  用于创建和释放redisObject对象
 - pqsort.c  
+  
   - 排序算法类
 - slowlog.c 
-  - 一种日志类型的，与hyperloglog.c类似
+  
+  - 一种日志类型的，与hyperloglog.c类似，在2.2.12版本引入。用于**记录超过指定执行时间的命令**，这个执行时间不包括诸如与客户端通信的IO操作耗时，是实实在在的命令执行的耗时
 - sort.c 
+  
   - 排序算法类，与pqsort.c使用的场景不同
 - tls.c
+  
   -  安全传输协议实现 
 
 # 模块化(Module)
@@ -237,13 +259,9 @@
 
     资源释放和文件删除是非常慢的，会阻塞服务器
 
-     
-
     **fsync加入BIO的原因**
 
     把内存中修改的文件数据同步到磁盘。调用者将被阻塞至磁盘报告同步完成。
-
-     
 
     **BIO的设计**
 
@@ -260,6 +278,8 @@
   - 对 lzf.h 和 lzfP.h 的合并
 
 **SHA缩算法 **
+
+> SHA安全散列算法SHA （Secure Hash Algorithm，SHA）
 
 - sha1.c
 - sha1.h
