--- a/docs/参考资料.md
+++ b/docs/参考资料.md
@@ -1,32 +1,37 @@
 # 参考资料
 
 - SDS
-  -   https://blog.csdn.net/weixin_33682719/article/details/88923569 
-
+  
+-   https://blog.csdn.net/weixin_33682719/article/details/88923569 
+  
 - 源码分析
-  - https://www.cnblogs.com/jabnih/p/4814212.html
-
-- Redis事件 
-  - https://www.jianshu.com/p/99eba6dbd571
-
+  
+- https://www.cnblogs.com/jabnih/p/4814212.html
+  
 - ziplist源码分析
-  -  https://www.jianshu.com/p/afaf78aaf615 
-
+  
+-  https://www.jianshu.com/p/afaf78aaf615 
+  
 - server端启动流程
-  - https://blog.csdn.net/u013359794/article/details/79425252 
-
+  
+- https://blog.csdn.net/u013359794/article/details/79425252 
+  
 - ae事件库
-  - <https://www.cyhone.com/articles/analysis-of-redis-ae/>
-
-- 时间事件
+  
+- <https://www.cyhone.com/articles/analysis-of-redis-ae/>
+  
   -  https://blog.csdn.net/hackersuye/article/details/83051317
-
+  -   https://blog.csdn.net/hj7jay/article/details/53905909 
+  -  https://www.jianshu.com/p/99eba6dbd571
+  
 - redis单元测试
-  - https://yq.aliyun.com/articles/62845 
-
+  
+- https://yq.aliyun.com/articles/62845 
+  
 - Redis常见的坑
-  - https://www.jianshu.com/p/7edb3e4e13e8
-
+  
+- https://www.jianshu.com/p/7edb3e4e13e8
+  
 - Redis之IO封装：
 
 ​			https://blog.csdn.net/Xiejingfa/article/details/51433696
@@ -42,4 +47,8 @@
     - http://www.zyiz.net/tech/detail-132369.html
 - 主从复制源码分析
   - https://blog.csdn.net/maliao1123/article/details/54016501
-  - 
+- Redis 网络相关
+  -  https://yq.aliyun.com/articles/412819?scm=20140722.184.2.173 
+
+- Get命令处理流程
+  -  https://my.oschina.net/u/4385353/blog/3241505/print 
