--- a/docs/常用的源码文件.md
+++ b/docs/常用的源码文件.md
@@ -117,11 +117,14 @@
 - config.c 
   - 用于将配置文件redis.conf文件中的配置读取出来的属性通过程序放到server对象中。
 
-
 #  主从复制(Replication)
 
+> ```c
+> 具体的指令调用时“networking->readQueryFromClient”完成Relication触发。同理AOF也一样
+> ```
+
 - replication.c
-  - 用于主从数据库的复制操作的实现。从而实现redis读写分离
+  - 用于主从数据库的复制操作的实现。从而实现redis读写分离。
 
 # 事务处理(Transaction)
 
@@ -138,12 +141,13 @@
   - 全称为append only file，作用就是记录每次的写操作,在遇到断电等问题时可以用它来恢复数据库状态。
 
 
-> 如果开启了AOF，每执行一条指令就需要执行一个AOF相关函数(不一定是真实写到AOF文件中，可能是BUFFER中，但一定会执行)
+> 如果开启了AOF，具体的指令调用时“networking->readQueryFromClient”完成Relication触发。因此每执行一条指令就需要执行一个AOF相关函数(不一定是真实写到AOF文件中，可能是BUFFER中，但一定会执行)。
 
 - rdb.c
   - 对于Redis本地数据库的相关操作，默认文件是dump.rdb（通过配置文件获得），包括的操作包括保存，移除，查询等等。
+  - rdb通常由命令bgsave或save或者serverCron()定时触发
 
-> RDB是由定时任务触发了，当符合了设置的RDB规则时就开始RDB.
+> RDB是由定时任务serverCron()触发了，当符合了设置的RDB规则时就开始RDB.
 
 从上面可知，AOF安全性可靠性高于RDB,但AOF相对于RDB来说效率慢，体积大。
 
@@ -266,6 +270,10 @@
     **BIO的设计**
 
     目前有两种任务：fsync和close。每种任务一个队列和一个线程。
+  
+- lazyfree.c
+
+  - 在具体的close过程中，是通过调用lazyfree.c实现的。
 
 # 算法相关
 
@@ -352,7 +360,7 @@
 - defrag.c
 - evict.c
 - expire.c
-- lazyfree.c
+- 
 - localtime.c
 - mkreleasehdr.sh
 - redis-trib.rb
