--- a/docs/参考资料.md
+++ b/docs/参考资料.md
@@ -49,6 +49,7 @@
   - https://blog.csdn.net/maliao1123/article/details/54016501
 - Redis 网络相关
   -  https://yq.aliyun.com/articles/412819?scm=20140722.184.2.173 
-
 - Get命令处理流程
   -  https://my.oschina.net/u/4385353/blog/3241505/print 
+- Redis RDB 是fork出子进程，为什么可以fork?
+  - https://www.cnblogs.com/cjjjj/p/12748306.html
