--- a/docs/常用的源码文件.md
+++ b/docs/常用的源码文件.md
@@ -145,9 +145,15 @@
 
 - rdb.c
   - 对于Redis本地数据库的相关操作，默认文件是dump.rdb（通过配置文件获得），包括的操作包括保存，移除，查询等等。
-  - rdb通常由命令bgsave或save或者serverCron()定时触发
+  - 
 
-> RDB是由定时任务serverCron()触发了，当符合了设置的RDB规则时就开始RDB.
+> rdb通常由命令bgsave或save或者serverCron()定时触发，serverCron()触发指当符合了设置的RDB规则时就开始RDB.
+>
+> ```
+> save 900 1   服务器在900秒之内，对数据库进行至少1次修改
+> save 300 10 服务器在300秒之内，对数据库进行至少10次修改
+> save 60 10000 服务器在60秒之内，对数据库进行至少10000次修改
+> ```
 
 从上面可知，AOF安全性可靠性高于RDB,但AOF相对于RDB来说效率慢，体积大。
 
