--- a/docs/常用的源码文件.md
+++ b/docs/常用的源码文件.md
@@ -136,14 +136,24 @@
 > Redis提供了两种备份机制，AOF和RDB:  
 >
 > Redis的AOF机制有点类似于Mysql binlog，是Redis的提供的一种持久化方式（另一种是RDB），它会将所有的写命令按照一定频率(no, always, every seconds)写入到日志文件中，当Redis停机重启后恢复数据库。
+>
+> * save/bgsave命令，bgsave另外fork一个进程，子进程完成后signal父进程，父进程wait3()子进程，服务器能继续处理客户端的命令请求；
+>
+> * aof持久化优先于rdb持久化载入，且rdbload()中为互斥的；
+>
+> * save/bgsave在运行期间是互斥的；
+>
+> * bgrewirteaof和bgsave命令也是互斥的；
+>
+> * 自动间隔性保存：save period mod_times:表示在period间隔内有多少次mod_times触发bgsave命令;
 
-- aof.c
+- **aof.c**
   - 全称为append only file，作用就是记录每次的写操作,在遇到断电等问题时可以用它来恢复数据库状态。
 
 
 > 如果开启了AOF，具体的指令调用时“networking->readQueryFromClient”完成Relication触发。因此每执行一条指令就需要执行一个AOF相关函数(不一定是真实写到AOF文件中，可能是BUFFER中，但一定会执行)。
 
-- rdb.c
+- **rdb.c**
   - 对于Redis本地数据库的相关操作，默认文件是dump.rdb（通过配置文件获得），包括的操作包括保存，移除，查询等等。
   - 
 
