--- a/docs/参考资料.md
+++ b/docs/参考资料.md
@@ -53,3 +53,8 @@
   -  https://my.oschina.net/u/4385353/blog/3241505/print 
 - Redis RDB 是fork出子进程，为什么可以fork?
   - https://www.cnblogs.com/cjjjj/p/12748306.html
+- Redis服务器编程模型
+  -  https://blog.csdn.net/yfkiss/article/details/7057538 
+  -  https://blog.csdn.net/yvhqbat/article/details/51513815 
+- 输入输出缓冲区
+  - https://yq.aliyun.com/articles/576296 
