--- a/docs/常用的源码文件.md
+++ b/docs/常用的源码文件.md
@@ -151,7 +151,62 @@
   - 全称为append only file，作用就是记录每次的写操作,在遇到断电等问题时可以用它来恢复数据库状态。
 
 
-> 如果开启了AOF，具体的指令调用时“networking->readQueryFromClient”完成Relication触发。因此每执行一条指令就需要执行一个AOF相关函数(不一定是真实写到AOF文件中，可能是BUFFER中，但一定会执行)。
+> 1、如果开启了AOF，具体的指令调用时“networking->readQueryFromClient”完成Relication触发。因此每执行一条指令就需要执行一个AOF相关函数(不一定是真实写到AOF文件中，可能是BUFFER中，但一定会执行)。
+>
+> 2、指令 BGREWRITEAOF 也会导致AOF重写
+
+ AOF持久化的实现可以分为命令追加、文件写入和文件同步三个步骤。
+
+AOF文件恢复是在启动时触发
+
+AOF还有一个重写功能 
+
+(1)命令追加
+
+​	当AOF持久化功能处于打开状态时，服务器在执行完一个写命令之后，会以协议格式将被执行的写命
+
+令追加到服务器状态的aof_buf缓冲区的末尾
+
+(2)文件写与文件同步
+
+​		文件事件负责处理客户端的命令请求，而时间事件负责执行serverCron
+
+函数这样的定时运行的函数。在处理文件事件执行写命令，使得命令被追加到aof_buf中，然后在处理时间事件执
+
+行serverCron函数会调用flushAppendOnlyFile函数进行文件的写入和同步。
+
+      flushAppendOnlyFile函数的行为由服务器配置的appendfsync选项的值决定。
+
+always：将aof_buf中的所有内容写入并同步到aof文件。
+
+everysec：将aof_buf中的所有内容写入到aof文件，如果上次同步的时间距离现在超过1s，那么对aof文件进行同
+
+                  步，同步操作由一个线程专门负责执行。
+
+no：将aof_buf中的所有内容写入到aof文件，但不对aof文件同步，同步有操作系统执行。
+
+(3)AOF的重写实现
+
+>  serverCron定时程序，触发AOF重写 
+
+​      由于AOF重写是会进行大量写写入操作，势必为长时间阻塞主进程，因此redis把重写程序放到子进程执行。
+
+这样做有两点好处：
+
+      1）子进程重写期间，主进程可以继续处理命令。
+    
+      2）子进程带有主进程的数据副本，这样就可以避免与主进程竞争db->dict，这是线程实现不了的。
+    
+      重写期间，主进程继续处理命令，对数据库状态进行修改，这样使得当前的数据库状态与重写的AOF文件
+
+所保存的数据库状态不一致。因此，redis设置了AOF重写缓冲区，在创建子进程后，主进程每执行一个写命令
+
+都会写到重写缓冲区。在子进程完成重写后，主进程会将AOF重写缓冲区的数据写入到重写的AOF文件，保证
+
+数据状态的一致。
+（4）AOF恢复
+
+​	
 
 - **rdb.c**
   - 对于Redis本地数据库的相关操作，默认文件是dump.rdb（通过配置文件获得），包括的操作包括保存，移除，查询等等。
@@ -376,7 +431,6 @@
 - defrag.c
 - evict.c
 - expire.c
-- 
 - localtime.c
 - mkreleasehdr.sh
 - redis-trib.rb
