--- a/docs/参考资料.md
+++ b/docs/参考资料.md
@@ -58,3 +58,5 @@
   -  https://blog.csdn.net/yvhqbat/article/details/51513815 
 - 输入输出缓冲区
   - https://yq.aliyun.com/articles/576296 
+- 内存分配
+  - https://blog.csdn.net/weixin_30278311/article/details/96126313
