--- a/docs/常用的源码文件.md
+++ b/docs/常用的源码文件.md
@@ -59,7 +59,7 @@
 - ae_select.c
   - select I/O模型实现
 
-# 内存管理(malloc)
+# 内存管理(zmalloc)
 
 > 关于Redis的内存分配的封装实现。Redis并没有自己实现内存池，没有在标准的系统内存分配器上再加上自己的东西。所以系统内存分配器的性能及碎片率会对Redis造成一些性能上的影响。
 >
@@ -68,8 +68,15 @@
 - zmalloc.c
   - 对c语言中的malloc简单包装。仅仅是精确的记录的已经分配的内存，基本没有其它多余的扩展。
 - sdsalloc.h
+  - 仅仅导入zmalloc.h文件，然后对zmalloc，zrealloc和zfree分别重命名为s_malloc，s_realloc和s_free
 - rax_malloc.h
+  - 仅仅导入zmalloc.h文件，然后对zmalloc，zrealloc和zfree分别重命名为rax_malloc，rax_realloc和rax_free
 - listpack_malloc.h
+  - 仅仅导入zmalloc.h文件，然后对zmalloc，zrealloc和zfree分别重命名为lp_malloc，lp_realloc和lp_free
+
+> 知识点：
+>
+> jemalloc ，tcmalloc 或者apple系统下，都提供了检测内存块大小的函数，因此 zmalloc_size就使用相应的库函数。如果默认使用libc的话则 zmalloc_size需要自己定义实现。
 
 # 网络连接
 
