--- a/docs/常用的源码文件.md
+++ b/docs/常用的源码文件.md
@@ -103,6 +103,22 @@
 
   - 3.0之后，集群模式实现
 
+- redis-trib.rb
+
+  - ruby脚本语言，是一个工具包，可以通过此工具来输入相关命令完成对应集群的一些操作。比如创建集群等。但作者已经不建议使用此工具了，因为在最新(6.x之后，具体哪个版本建议的我没有去追究)的版本中，redis-cli已经完全实现了这个redis-trib.rb功能。
+  - redis-trib.rb源文件说明
+
+  > ```ruby
+  > $command = ARGV.shift
+  > $opts, $args = parse_options($command) if $command
+  > 
+  > puts "WARNING: redis-trib.rb is not longer available!".yellow
+  > puts "You should use #{'redis-cli'.bold} instead."
+  > puts ''
+  > puts "All commands and features belonging to redis-trib.rb "+
+  >      "have been moved\nto redis-cli."
+  > ```
+
 - rax.c
 
   Redis基数树。一种保存长整形的算法。
