--- a/docs/参考资料.md
+++ b/docs/参考资料.md
@@ -67,3 +67,7 @@
   -  https://zhuanlan.zhihu.com/p/97308896 
 - 不相干的(技术文章配图)：
   - https://draveness.me/sketch-and-sketch/
+
+- Rax基数树
+  -  https://www.jianshu.com/p/8abdfe63e525 
+  -  https://blog.csdn.net/qq_31720329/article/details/103432938 
