--- a/docs/参考资料.md
+++ b/docs/参考资料.md
@@ -70,4 +70,7 @@
 
 - Rax基数树
   -  https://www.jianshu.com/p/8abdfe63e525 
-  -  https://blog.csdn.net/qq_31720329/article/details/103432938 
+  -  https://blog.csdn.net/qq_31720329/article/details/103432938
+
+- Redis指令处理过程
+   - https://www.cnblogs.com/remcarpediem/p/12038377.html
